High contrast fix in Sources tools panel
Fix the hover and focus on both left and right sidebar.
Making sure the icons and text changes the correct color
base on the states.
Event Listener, Global and Scope are using common styles
from tree outline.

Before: https://imgur.com/a/y0eTN5g
After: https://imgur.com/a/AzHuoNn

Bug: 1048378

--- a/front_end/console/consoleSidebar.css
+++ b/front_end/console/consoleSidebar.css
@@ -61,16 +61,9 @@ li .largeicon-navigator-folder {
         forced-color-adjust: none;
         background-color: Highlight;
     }
-    .tree-outline li:hover .tree-element-title,
-    .tree-outline li.selected .tree-element-title,
     .tree-outline li:hover .count,
     .tree-outline li.selected .count {
         forced-color-adjust: none;
         color: HighlightText;
-    }
-    .tree-outline li:hover [is=ui-icon].icon-mask,
-    .tree-outline li.selected [is=ui-icon].icon-mask,
-    .tree-outline li.selected:focus .spritesheet-mediumicons:not(.icon-mask) {
-        background-color: HighlightText !important;
     }
 }
